# cadybara-benchmark

./: .env.example  .gitignore  AGENTS.md  DESIGN.md  README.md  pyproject.toml
cadybara_benchmark/: api_client.py  cadgenbench.py  cadgenbench_cli.py  cadgenbench_export.py  cadgenbench_export_cli.py  cli.py  config.py  db.py  experiment_files.py  geometry.py  ids.py  json_utils.py  metrics.py  publishing.py  query_images.py  run_files.py  time.py  web.py
cadybara_benchmark/analysis/: artifacts.py  parsing.py  reporting.py  scoring.py
cadybara_benchmark/services/: analysis.py  direct.py  experiments.py  queries.py  runs.py
cadybara_benchmark/static/: app.css  app.js  compare.css  compare.html  compare.js  index.html  query-text.js  stl-viewer.css  stl-viewer.html  stl-viewer.js
database/: schema.sql
tests/: conftest.py  test_api_client.py  test_cadgenbench.py  test_cadgenbench_export.py  test_cli.py  test_config.py  test_db.py  test_direct.py  test_geometry.py  test_metrics.py  test_query_images.py  test_run_analysis_publish.py  test_run_files.py  test_services.py  test_web.py
