[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cadybara-benchmark"
version = "0.1.0"
description = "Local benchmark CLI for Cadybara Agent API experiments"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "cadquery>=2.4",
  "fastapi>=0.111",
  "typer>=0.12",
  "python-dotenv>=1.0",
  "requests>=2.32",
  "pydantic>=2.7",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
cadybara-benchmark = "cadybara_benchmark.cli:app"
import-cadgenbench = "cadybara_benchmark.cadgenbench_cli:app"
export-cadgenbench = "cadybara_benchmark.cadgenbench_export_cli:main"

[tool.setuptools.packages.find]
include = ["cadybara_benchmark*"]

[tool.setuptools.package-data]
cadybara_benchmark = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
